// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`launch Edge with custom arguments 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "foobar",
      ],
      "defaultViewport": Object {
        "height": 456,
        "width": 123,
      },
      "executablePath": "/path/to/edge",
      "headless": true,
      "product": "edge",
    },
  ],
]
`;

exports[`launch Edge with default values 1`] = `
Array [
  Array [
    Object {
      "defaultViewport": Object {
        "height": 900,
        "width": 1200,
      },
      "executablePath": "/path/to/edge",
      "product": "edge",
    },
  ],
]
`;

exports[`launch Firefox with custom arguments 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "foobar",
      ],
      "binary": "/foo/bar",
      "defaultViewport": Object {
        "height": 456,
        "width": 123,
      },
      "executablePath": "/foo/bar",
      "headless": true,
      "product": "firefox",
    },
  ],
]
`;

exports[`launch Firefox with default values 1`] = `
Array [
  Array [
    Object {
      "defaultViewport": Object {
        "height": 900,
        "width": 1200,
      },
      "executablePath": "/path/to/firefox",
      "product": "firefox",
    },
  ],
]
`;

exports[`launch chrome with chrome arguments 1`] = `
Array [
  Array [
    Object {
      "chromeFlags": Array [
        "--disable-extensions",
        "--disable-background-networking",
        "--disable-background-timer-throttling",
        "--disable-backgrounding-occluded-windows",
        "--disable-sync",
        "--metrics-recording-only",
        "--disable-default-apps",
        "--mute-audio",
        "--no-first-run",
        "--disable-hang-monitor",
        "--disable-prompt-on-repost",
        "--disable-client-side-phishing-detection",
        "--password-store=basic",
        "--use-mock-keychain",
        "--disable-component-extensions-with-background-pages",
        "--disable-breakpad",
        "--disable-dev-shm-usage",
        "--disable-ipc-flooding-protection",
        "--disable-renderer-backgrounding",
        "--enable-features=NetworkService,NetworkServiceInProcess",
        "--disable-features=site-per-process,TranslateUI,BlinkGenPropertyTrees",
        "--window-position=0,0",
        "--window-size=1200,900",
        "--headless",
        "--no-sandbox",
        "--window-size=222,333",
        "--device-scale-factor=3",
        "--user-agent=Mozilla/5.0 (Linux; Android 6.0; Nexus 5 Build/MRA58N) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3765.0 Mobile Safari/537.36",
      ],
      "chromePath": "/foo/bar",
    },
  ],
]
`;

exports[`launch chrome with default values 1`] = `
Array [
  Array [
    Object {
      "chromeFlags": Array [
        "--disable-extensions",
        "--disable-background-networking",
        "--disable-background-timer-throttling",
        "--disable-backgrounding-occluded-windows",
        "--disable-sync",
        "--metrics-recording-only",
        "--disable-default-apps",
        "--mute-audio",
        "--no-first-run",
        "--disable-hang-monitor",
        "--disable-prompt-on-repost",
        "--disable-client-side-phishing-detection",
        "--password-store=basic",
        "--use-mock-keychain",
        "--disable-component-extensions-with-background-pages",
        "--disable-breakpad",
        "--disable-dev-shm-usage",
        "--disable-ipc-flooding-protection",
        "--disable-renderer-backgrounding",
        "--enable-features=NetworkService,NetworkServiceInProcess",
        "--disable-features=site-per-process,TranslateUI,BlinkGenPropertyTrees",
        "--window-position=0,0",
        "--window-size=1200,900",
      ],
      "chromePath": undefined,
    },
  ],
]
`;

exports[`launch chrome with default values 2`] = `
Array [
  Array [
    Object {
      "browserURL": "http://localhost:1234",
      "defaultViewport": null,
    },
  ],
]
`;

exports[`launch chrome without default flags and without puppeteer default args 1`] = `
Array [
  Array [
    Object {
      "chromeFlags": Array [
        "--window-position=0,0",
        "--window-size=1200,900",
      ],
      "chromePath": undefined,
      "ignoreDefaultArgs": true,
    },
  ],
]
`;

exports[`launch chrome without default flags and without puppeteer default args 2`] = `
Array [
  Array [
    Object {
      "browserURL": "http://localhost:1234",
      "defaultViewport": null,
    },
  ],
]
`;

exports[`overriding chrome default flags 1`] = `
Array [
  Array [
    Object {
      "chromeFlags": Array [
        "--disable-extensions",
        "--disable-background-networking",
        "--disable-background-timer-throttling",
        "--disable-backgrounding-occluded-windows",
        "--metrics-recording-only",
        "--disable-default-apps",
        "--mute-audio",
        "--no-first-run",
        "--disable-hang-monitor",
        "--disable-prompt-on-repost",
        "--disable-client-side-phishing-detection",
        "--password-store=basic",
        "--use-mock-keychain",
        "--disable-component-extensions-with-background-pages",
        "--disable-breakpad",
        "--disable-dev-shm-usage",
        "--disable-ipc-flooding-protection",
        "--disable-renderer-backgrounding",
        "--disable-features=site-per-process,TranslateUI,BlinkGenPropertyTrees",
        "--window-position=0,0",
        "--window-size=1200,900",
        "--enable-features=NetworkService",
      ],
      "chromePath": undefined,
      "ignoreDefaultArgs": Array [
        "--disable-sync",
        "--enable-features=NetworkService,NetworkServiceInProcess",
      ],
    },
  ],
]
`;

exports[`launch Firefox without Puppeteer default args 1`] = `
Array [
  Array [
    Object {
      "defaultViewport": Object {
        "height": 900,
        "width": 1200,
      },
      "executablePath": "/path/to/firefox",
      "ignoreDefaultArgs": true,
      "product": "firefox",
    },
  ],
]
`;


exports[`launch Edge without Puppeteer default args 1`] = `
Array [
  Array [
    Object {
      "defaultViewport": Object {
        "height": 900,
        "width": 1200,
      },
      "executablePath": "/path/to/edge",
      "ignoreDefaultArgs": true,
      "product": "edge",
    },
  ],
]
`;
